test/fail/ac/predicateboolexp-2.app
//^predicate should contain a Bool expression
application test

section predicate

predicate foo(i:Int){
  i+false+344325+"dfgfdgdfg"+0.435543  
}